# Generated by Django 5.2.17 on 2026-08-14 11:36

import django.core.validators
import django.db.models.deletion
import django.db.models.functions.text
import uuid
from decimal import Decimal
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('products', '0004_normalize_generated_english_names'),
    ]

    operations = [
        migrations.CreateModel(
            name='Supplier',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('code', models.CharField(max_length=64, unique=True)),
                ('name', models.CharField(max_length=160)),
                ('address', models.TextField(blank=True)),
                ('contact_name', models.CharField(blank=True, max_length=120)),
                ('phone', models.CharField(blank=True, max_length=40)),
                ('email', models.EmailField(blank=True, max_length=254)),
                ('notes', models.TextField(blank=True)),
            ],
            options={
                'ordering': ('name', 'code'),
                'permissions': (('manage_suppliers', 'Can manage suppliers and supply terms'),),
                'constraints': [models.UniqueConstraint(django.db.models.functions.text.Lower('name'), name='supplier_name_ci_unique')],
            },
        ),
        migrations.CreateModel(
            name='SupplierIngredient',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('unit_price', models.DecimalField(decimal_places=4, max_digits=12, validators=[django.core.validators.MinValueValidator(Decimal('0.0001'))])),
                ('currency', models.CharField(default='GBP', max_length=3)),
                ('price_unit', models.CharField(default='kg', max_length=24)),
                ('minimum_order_quantity', models.DecimalField(decimal_places=3, max_digits=12, validators=[django.core.validators.MinValueValidator(Decimal('0.001'))])),
                ('minimum_order_unit', models.CharField(default='kg', max_length=24)),
                ('lead_time_days', models.PositiveSmallIntegerField(default=0)),
                ('notes', models.CharField(blank=True, max_length=255)),
                ('is_active', models.BooleanField(default=True)),
                ('is_preferred', models.BooleanField(default=False)),
                ('ingredient', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='supplier_terms', to='products.ingredient')),
                ('supplier', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='supplied_ingredients', to='suppliers.supplier')),
            ],
            options={
                'ordering': ('-is_active', 'ingredient__name', 'supplier__name'),
                'indexes': [models.Index(fields=['supplier', 'is_active'], name='supplier_term_active_idx'), models.Index(fields=['ingredient', 'is_active'], name='ingredient_term_active_idx')],
                'constraints': [models.UniqueConstraint(fields=('supplier', 'ingredient'), name='unique_supplier_ingredient'), models.UniqueConstraint(condition=models.Q(('is_active', True), ('is_preferred', True)), fields=('ingredient',), name='unique_preferred_supplier_per_ingredient'), models.CheckConstraint(condition=models.Q(('is_preferred', False), ('is_active', True), _connector='OR'), name='preferred_supplier_ingredient_active')],
            },
        ),
    ]
